home page styling without finishing the card

--- a/src/components/categories/categories.scss
+++ b/src/components/categories/categories.scss
@@ -1,11 +1,12 @@
 
 
 .h-three{
-    position: absolute;
-    top: -251%;
-    left: 42%;
+    // position: absolute;
+    // top: -251%;
+    // left: 42%;
     color: white;
     font-size: 45px;
+    text-transform: uppercase;
 }
 
 .h-three a{
