--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,4 +1,5 @@
-
+@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 .btnnn {
     padding: 4px 6px;
     height: 28px;
@@ -9,9 +10,15 @@
   }
  .footer{
      margin-top: 8%;
- }
+     display: grid;
+    grid-column: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+
+
+ 
  .newsletter{
-     margin: 2% 3%;
+     margin: 2% 4%;
  }
 
  .newsletterh6{
@@ -27,7 +34,21 @@
     background: #417bff;
     content: '';
  }
-
+ .links{
+  text-align: center;
+  margin: 2% 4% 17.2%;
+}
+.connect{
+  text-align: center;
+  margin: 2% 4% 27.2%;
+  display: grid;
+}
+.connect span{
+  margin: 4px;
+}
+.mr-auto{
+  display: block;
+}
  .buttonnn {
     text-transform: uppercase;
     color: #617cff;
@@ -79,3 +100,128 @@
     transform: rotate(135deg) translateX(0);
     
   }
+
+
+.social-icon {
+    text-decoration: none;
+    color: #fff;
+
+}
+p > a:hover{
+    color: #d9d9d9;
+    text-decoration:  underline;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin:  1% 0 1% 0;
+}
+._12 {
+    font-size: 1.2em;
+}
+._14 {
+    font-size: 1.4em;
+}
+ul {
+    padding:0;
+    list-style: none;
+}
+.footer-social-icons {
+    display:block;
+    margin: 2% 4% 40.2%;
+
+}
+.social-icon {
+    color: #fff;
+}
+ul.social-icons {
+    margin-top: 35px;
+}
+.social-icons li {
+    vertical-align: top;
+    display: inline;
+    height: 100px;
+}
+.social-icons a {
+    color: #fff;
+    text-decoration: none;
+}
+.fa-facebook {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+.fa-facebook:hover {
+    background-color: #3d5b99;
+}
+.fa-twitter {
+    padding:10px 12px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+.fa-twitter:hover {
+    background-color: #00aced;
+}
+.fa-rss {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+.fa-rss:hover {
+    background-color: #eb8231;
+}
+.fa-youtube {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+.fa-youtube:hover {
+    background-color: #e64a41;
+}
+.fa-linkedin {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+.fa-linkedin:hover {
+    background-color: #0073a4;
+}
+.fa-github {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+.fa-github:hover {
+    background-color: #5a32a3;
+}
+
+.fa{
+    border-radius: 10rem;
+}
