--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,8 +1,8 @@
 .header{
-    position: fixed;
-    width: 100%;
-    z-index: 9999;
-
+  position: sticky;
+  width: 100%;
+  z-index: 9999;
+  top: 0;
 }
 
 .navbar-brand{
