--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,10 +1,9 @@
-body {
-}
 .login {
   width: 29vw;
   padding: 3vw;
   height: 30vw;
-  margin-left: 25vw;
+  margin-left: 16vw;
+  margin-top: 9vw;
   box-shadow: 0vw 1vw 3vw grey;
 }
 aside.form-elegant {
@@ -14,25 +13,9 @@ aside.form-elegant {
   height: 30vw;
   margin-left: 25vw;
 }
-#username {
+.flexRight {
+  float: right;
 }
-#password {
-}
-.form-elegant .font-small {
-  font-size: 0.8rem;
-}
-
-.form-elegant .z-depth-1a {
-  -webkit-box-shadow: 0 2px 5px 0 rgba(55, 161, 255, 0.26),
-    0 4px 12px 0 rgba(121, 155, 254, 0.25);
-  box-shadow: 0 2px 5px 0 rgba(55, 161, 255, 0.26),
-    0 4px 12px 0 rgba(121, 155, 254, 0.25);
-}
-
-.form-elegant .z-depth-1-half,
-.form-elegant .btn:hover {
-  -webkit-box-shadow: 0 5px 11px 0 rgba(85, 182, 255, 0.28),
-    0 4px 15px 0 rgba(36, 133, 255, 0.15);
-  box-shadow: 0 5px 11px 0 rgba(85, 182, 255, 0.28),
-    0 4px 15px 0 rgba(36, 133, 255, 0.15);
+footer {
+  clear: both;
 }
