--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -1,6 +1,9 @@
 section{
   display: flex;
   flex-wrap: wrap;
+  margin: 3% 1%;
+  transition: all 0.2s ease-in-out;
+  
   // justify-content: space-evenly;
 }
 
@@ -9,10 +12,10 @@ section{
   display: flex;
   width: 300px;
 }
-.cards{
-// margin-top: 5%;
-border: none;
-}
+// // .cards{
+// // // margin-top: 5%;
+// // border: none;
+// // }
 
 .firstPic{
   position: absolute;
@@ -26,67 +29,6 @@ border: none;
   opacity: 1;
 }
 
-.card-title{
-  font-variant: all-petite-caps;
-}
-.card-body{
-  text-align: center;
-  display: grid;
-}
-
-.hoverBtn {
-  text-transform: uppercase;
-  color: #617cff;
-  text-align: center;
-  font-family: "Roboto", sans-serif;
-  font-size: em(18);
-  background-color: white;
-  position: relative;
-  overflow: hidden;
-  margin: auto;
-}
-
-.hoverBtn:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-right: 30px solid #4889ff59;
-  position: absolute;
-  bottom: -52%;
-  left: -4px;
-  transform: rotate(-45deg) translateX(-50px);
-
-  transition: transform 200ms ease;
-}
-
-.hoverBtn:after{
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-right: 30px solid #4889ff59;
-  position: absolute;
-  top: -52%;
-  right: -5px;
-  transform: rotate(135deg) translateX(-50px);
-
-  transition: transform 200ms ease;
-}
-.hoverBtn:hover:before {
-  transform: rotate(-45deg) translateX(0);
-}
-
-.hoverBtn:hover:after {
-  transform: rotate(135deg) translateX(0);
-}
-a:hover{
-   text-decoration: none;
-}
 
 .indigo-text{
   z-index: 99;
@@ -103,12 +45,8 @@ a:hover{
 .redHeart{
   color: red($color: #000000);
 }
-.grid{
-  display: flex;
-   width: 50%; 
-  justify-content: space-evenly;
-  margin: 5% auto;
-}
-.carousel .slide{
-  width: fit-content;
+
+.containerDiv{
+  margin: auto;
+  width: 85%;
 }
