--- a/src/components/categories/categories.scss
+++ b/src/components/categories/categories.scss
@@ -13,4 +13,17 @@
     text-decoration: none;
     color: white;
 }
+.carousel-caption{
+    // position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    text-align: center;
+    opacity: .5;
+    transition: opacity .15s ease;
 
+}
