--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -88,7 +88,7 @@
   display: flex;
   // -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-right: -90px;
+  // margin-right: -90px;
   margin-left: -15px;
 }
 
