--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -1,52 +1,39 @@
-section{
-  display: flex;
-  flex-wrap: wrap;
-  margin: 3% 1%;
-  transition: all 0.2s ease-in-out;
-  
-  // justify-content: space-evenly;
-}
-
-.hover{
-  height:300px;
-  display: flex;
-  width: 300px;
-}
-// // .cards{
-// // // margin-top: 5%;
-// // border: none;
-// // }
-
-.firstPic{
-  position: absolute;
-}
-.secPic{
-  position: absolute;
-  opacity: 0;
-  transition: opacity 0.7s ease;
-}
-.secPic:hover{
-  opacity: 1;
-}
-
-
-.indigo-text{
-  z-index: 99;
-  // overflow: hidden;
-}
-
-
-.indigo-text {
-  margin: 5%;
-    font-size: 29px;
-    color: white;
-}
-
-.redHeart{
-  color: red($color: #000000);
-}
-
 .containerDiv{
-  margin: auto;
+  margin: 3% auto;
   width: 85%;
+  grid-template-columns: 33.3% 33.3% 33.3% ;
+  display: grid;
+}
+
+.col-md-4 {
+  max-width: 100%;
+  margin: 8% auto;
+  border: 0px solid transparent;
+}
+
+.card{
+  border-radius: 1.25rem;
+}
+.img-fluid {
+  border-radius: 1.25rem;
+}
+a.btn-default.btn.Ripple-parent.btn-action.ml-auto.mr-4.lighten-3.mdb-coalor{
+  border-radius: 1.25rem 1.4rem;
+  background-color: #4889ff59;
+
+}
+
+.mdb-color {
+  background-color: #4889ff59;
+}
+
+.shadow-box-example {
+  border-radius: 1.25rem;
+}
+
+.shadow-box-example:hover{
+   background-color: none ;
+}
+.card:hover{
+    box-shadow: none;
 }
