--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -16,3 +16,40 @@
 .card-img-top .imagepro{
     margin: auto;
 }
+.avatar{
+    padding: 20px;
+    transform: translate(0%, -50%);
+    width: 70%;
+    margin: auto;
+    background-color: #fff;
+    border-left: solid 20px transparent; 
+    border-right: solid 20px transparent; 
+    border-bottom: solid 20px #fff;
+    box-shadow: 0 0 15px 0 #333;
+
+}
+.imgAvatar{
+    // padding: 20px;
+    transform: translate(180%, -50%);
+    // width: 70%;
+    margin: auto;    
+}
+
+h3{
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.5vw;
+    font-weight: 400;
+}
+
+.headerProfile .posts , .headerProfile .following , .headerProfile .followers{
+    text-align: center;
+    margin-top: 10%;
+
+}
+.headerProfile{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    margin: auto 20%; 
+    justify-content: center;
+}
