profile page styling

--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -32,7 +32,7 @@ a.btn-default.btn.Ripple-parent.btn-action.ml-auto.mr-4.lighten-3.mdb-coalor{
 }
 
 .shadow-box-example:hover{
-   background-color: none ;
+   background-color: white ;
 }
 .card:hover{
     box-shadow: none;
