--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,8 +9,25 @@
     color: #0d0c0c69;
     font-weight: 700;
 }
-.mr-auto{
-    // width: 100%;
+.navbar.header{
+
+    position: sticky;
+
+}
+.navbar-light .navbar-nav .nav-link {
+  background: none;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+  color: rgba(0,0,0,.7);
+  background: none;
+}
+.navbar-light .navbar-nav .nav-link {
+  color: rgba(0,0,0,.5);
+  height: 20px;
+  line-height: 10%;
+}
+.mr-auto.navbar-nav {
+  margin: auto;
 }
 
 .form-inline{
@@ -184,3 +201,7 @@
   color: #7e7979;
   background-color: #ffffff;
 }
+
+
+
+
