--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -1,114 +1,324 @@
-section{
-  display: flex;
-  flex-wrap: wrap;
-  // justify-content: space-evenly;
-}
-
-.hover{
-  height:300px;
-  display: flex;
-  width: 300px;
-}
-.cards{
-// margin-top: 5%;
-border: none;
-}
-
-.firstPic{
-  position: absolute;
-}
-.secPic{
-  position: absolute;
-  opacity: 0;
-  transition: opacity 0.7s ease;
-}
-.secPic:hover{
-  opacity: 1;
-}
-
-.card-title{
-  font-variant: all-petite-caps;
-}
-.card-body{
-  text-align: center;
+.productContainer{
+  margin: 3% auto;
+  width: 85%;
+  grid-template-columns: 33.3% 33.3% 33.3% ;
   display: grid;
 }
 
-.hoverBtn {
-  text-transform: uppercase;
-  color: #617cff;
+.col-md-4 {
+  max-width: 100%;
+  margin: 8% auto;
+  border: 0px solid transparent;
+}
+
+.card{
+  border-radius: 1.25rem;
+  border: none;
+
+}
+.img-fluid {
+  border-radius: 1.25rem;
+}
+// a.btn-default.btn.Ripple-parent.btn-action.ml-auto.mr-4.lighten-3.mdb-coalor{
+//   border-radius: 1.25rem 1.4rem;
+//   background-color: #4889ff59;
+
+// }
+.containerDiv{
+  margin: 3% auto;
+  width: 85%;
+  grid-template-columns: 33.3% 33.3% 33.3% ;
+  display: grid;
+}
+
+.col-md-4 {
+  max-width: 100%;
+  margin: 8% auto;
+  border: 0px solid transparent;
+}
+
+.card{
+  border-radius: 1.25rem;
+}
+.img-fluid {
+  border-radius: 1.25rem;
+}
+// a.btn-default.btn.Ripple-parent.btn-action.ml-auto.mr-4.lighten-3.mdb-coalor{
+//   border-radius: 1.25rem 1.4rem;
+//   background-color: #4889ff59;
+
+// }
+
+.shadow-box-example {
+  border-radius: 1.25rem;
+}
+
+.shadow-box-example:hover{
+   background-color: white ;
+}
+.card:hover{
+    box-shadow: none;
+}
+.btn-default {
+  color: #000;
+  background-color: #dbe1e4 !important;
+  border-radius: 1.25rem 1.4rem;
+}
+.mdb-color.lighten-3 {
+  background-color: #dbe1e4 !important;
+}
+.shadow-box-example {
+  border-radius: 1.25rem;
+}
+
+.shadow-box-example:hover{
+   background-color: white ;
+}
+.card:hover{
+    box-shadow: none;
+}
+.btn-default {
+  color: #000;
+  background-color: #dbe1e4 !important;
+  border-radius: 1.25rem 1.4rem;
+}
+.mdb-color.lighten-3 {
+  background-color: #dbe1e4 !important;
+}
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=M+PLUS+1p:wght@700&display=swap');
+section.allProduct{
+  display: grid;
+
+}
+
+.card.cards.card-image.imageCard {
+  background-color: none;
+}
+
+.text-white.text-center.d-flex.align-items-center.rgba-black-strong.py-5.px-4.divImg.imageCard{
+  background-color: #10101000;
+}
+
+i.fa.fa-gratipay.fa-3x.cyan-text {
+  font-size: xx-large;
+  cursor: pointer;
+  color: #00000047;
+}
+section.productContainer {
+  padding: 0 10%;
+}
+// .title-btn{
+//   width: 100%;
+//   background-color: #0000004f;
+// }
+section.productContainer {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  width: 100%;
+
+}
+
+.react-parallax {
+  margin: 5% 0;
+}
+
+.react-parallax-content {
+  background-color: #00000082;
+}
+
+.threeDivFooter{
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+}
+
+.firstSection , .secSection ,.thirdSection {
+  padding: 15%;
+  color: rgb(255, 255, 255);
+  margin: 15%;
+
+}
+.firstSection h3, .secSection h3,.thirdSection h3{
   text-align: center;
-  font-family: "Roboto", sans-serif;
-  font-size: em(18);
-  background-color: white;
-  position: relative;
+  font-family: 'Kaushan Script', cursive;
+}
+.firstSection p, .secSection p,.thirdSection p{
+  text-align: center;
+  font-family: 'Kaushan Script', cursive;
+font-family: 'M PLUS 1p', sans-serif;
+line-height: 7vh;
+}
+.paragraph{
+  font-weight: 400;
   overflow: hidden;
-  margin: auto;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
-
-.hoverBtn:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-right: 30px solid #4889ff59;
-  position: absolute;
-  bottom: -52%;
-  left: -4px;
-  transform: rotate(-45deg) translateX(-50px);
-
-  transition: transform 200ms ease;
-}
-
-.hoverBtn:after{
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-right: 30px solid #4889ff59;
-  position: absolute;
-  top: -52%;
-  right: -5px;
-  transform: rotate(135deg) translateX(-50px);
-
-  transition: transform 200ms ease;
-}
-.hoverBtn:hover:before {
-  transform: rotate(-45deg) translateX(0);
-}
-
-.hoverBtn:hover:after {
-  transform: rotate(135deg) translateX(0);
-}
-a:hover{
-   text-decoration: none;
-}
-
-.indigo-text{
-  z-index: 99;
-  // overflow: hidden;
-}
+@import url('https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap');
 
 
-.indigo-text {
-  margin: 5%;
-    font-size: 29px;
-    color: white;
+.wrapper {
+  height: 100%;
+  padding: 10px;
 }
 
-.redHeart{
-  color: red($color: #000000);
+.box {
+  position: relative;
+  max-height: 300px;
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow:
+  0 1.4px 1.7px rgba(0, 0, 0, 0.017),
+  0 3.3px 4px rgba(0, 0, 0, 0.024),
+  0 6.3px 7.5px rgba(0, 0, 0, 0.03),
+  0 11.2px 13.4px rgba(0, 0, 0, 0.036),
+  0 20.9px 25.1px rgba(0, 0, 0, 0.043),
+  0 50px 60px rgba(0, 0, 0, 0.06);
+  
+  
+  .frame {
+    position: absolute;
+    border: 1px solid #fff;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  h2, p {
+    position: absolute;
+    color: #fff;
+    z-index: 2;
+    width: 100%;
+    transition: opacity 0.2s, transform 0.3s;
+  }
+  
+  h2 {
+    font-weight: 500;
+    font-size: 22px;
+    margin-bottom: 0;
+    letter-spacing: 1px;
+  }
+  
+  p {
+    bottom: 0;
+    font-size: 14px;
+    letter-spacing: 1px;
+  }
+  
+  &:hover {
+    transition: all .3s ease-in-out;
+  }
+  
+  &:hover:before {
+    transition: all .3s ease-in-out;
+  }
+  
+  img {
+    position:relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all .3s ease-in-out;
+    
+    &:hover {
+      transition: all .3s ease-in-out;
+    }
+    
+    &:after {
+      content: '';
+      position: absolute;
+      background-color: rgba(0,0,0,.6);
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      opacity: 0;
+    }
+    
+    &:hover {
+      transition: all .3s ease-in-out;
+    }
+  }
 }
-.grid{
+
+
+ 
+.blury-card {  
+  .frame {
+    width: calc(100% - 40px);
+    height: calc(100% - 40px);
+    opacity: 0;
+    transition: all .3s ease-in-out
+  }
+  
+  h2 , p {
+    text-align: center;
+    top: 50%;
+    transform: translatey(-50%);
+    margin: 0;
+    z-index: 3;
+  }
+  
+  p { 
+    transform: translatey(30px);
+    letter-spacing: 3px;
+  }
+  
+  span {
+    font-size: 24px;
+  }
+  
+  &:before {
+    content:'';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #008E6B;
+    z-index: 1;
+    left: 0;
+    opacity: 0;
+    transition: all .3s ease-in-out;
+  }
+  
+  img {  z-index: 2; }
+  
+  &:hover {
+    .frame {
+      width: calc(100% - 120px);
+      height: calc(100% - 120px);
+      opacity: 1;
+    }
+    
+    img { opacity: .7; }
+    
+    &:before {
+      opacity: 1;
+      transition: all .3s ease-in-out;
+    }
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .wrapper {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .wrapper {
+    width: 100%;
+  }
+}
+i.fa.fa-heart.fa-3x.cyan-text{
   display: flex;
-   width: 50%; 
-  justify-content: space-evenly;
-  margin: 5% auto;
+    justify-content: flex-end;
+    font-size: xx-large;
+    color: #dbe1e4;
 }
-.carousel .slide{
-  width: fit-content;
+
+i.fa.fa-heart.fa-3x.cyan-text:hover{
+    color: #d35640;
 }
