--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -16,3 +16,49 @@
 .card-img-top .imagepro{
     margin: auto;
 }
+.avatar{
+    display: grid;
+    padding: 20px;
+    transform: translate(0%, -50%);
+    width: 70%;
+    margin: auto;
+    background-color: #dbe1e4de;
+    border-left: solid 20px transparent; 
+    border-right: solid 20px transparent; 
+    // border-bottom: solid 20px #fff;
+    box-shadow: 0 -18px 9px -1px #6c6c6c8c;
+}
+
+
+
+.imgAvatar{
+    // padding: 20px;
+    transform: translate(0%, -50%);
+    // width: 70%;
+    margin: auto;    
+}
+
+h3{
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.5vw;
+    font-weight: 400;
+}
+
+.headerProfile .posts , .headerProfile .following , .headerProfile .followers{
+    text-align: center;
+    margin-top: 10%;
+
+}
+.headerProfile{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    margin: auto 20%; 
+    justify-content: center;
+}
+#root {
+    background-color: #dbe1e4;
+}
+.react-parallax {
+    margin:  0; 
+}
