--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -9,7 +9,7 @@
     width: 100%;
   }
  .footer{
-     margin-top: 8%;
+    //  margin-top: 8%;
      display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 25% 25% 25% 25%;
