commiting befor checking new branch

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -213,7 +213,7 @@ ul.social-icons {
 .social-icons li {
     vertical-align: top;
     display: inline;
-    height: 100px;
+    // height: 100px;
 }
 .social-icons a {
     color: #fff;
