one product style

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,6 +2,7 @@
   position: sticky;
   width: 100%;
   z-index: 9999;
+  background-color: #080808cf ;
   top: 0;
 }
 .bg-light {
@@ -15,14 +16,15 @@
     position: sticky;
     padding-top: 0;
     padding-bottom: 0;
+    background-color: #080808cf ;
 }
 .col-md-6 {
   flex: 0 0 50%;
   max-width: 100%;
 }
-.navbar-light .navbar-nav .nav-link {
-  background: none;
-}
+// .navbar-light .navbar-nav .nav-link {
+//   background: none;
+// }
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
   color: rgba(0,0,0,.7);
   background: none;
@@ -185,15 +187,7 @@ button.btn-primary.btn.Ripple-parent.dropdown-toggle span{
   outline: 0;
 }
 
-.bg-light {
-  background-color: #080808eb!important;
-}
-.navbar-light .navbar-brand {
-  color:#f9f9f9e6;
-}
 
-
-  
   /*Neon*/
   .neon {
     text-align: center;
@@ -264,4 +258,10 @@ button.btn-primary.btn.Ripple-parent.dropdown-toggle span{
 i.fa.fa-search {
   color: white;
   margin-left: 1%;
+}
+
+
+nav.header.navbar.navbar-expand-lg.navbar-light.bg-light {
+  background-color: #080808cf;
+  
 }
