--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -331,7 +331,7 @@ line-height: 7vh;
 i.fa.fa-heart.fa-3x.cyan-text{
   display: flex;
     justify-content: flex-end;
-    font-size: xx-large;
+    font-size: x-large;
     color: #dbe1e4;
     width: 13%;
 }
