--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -14,7 +14,11 @@ section.productContainer{
 .card{
   border-radius: 1.25rem;
   border: none;
+  height: 350px;
 
+}
+.btn-title{
+  display: flex;
 }
 .img-fluid {
   border-radius: 1.25rem;
@@ -169,7 +173,7 @@ line-height: 7vh;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 @import url('https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap');
@@ -373,4 +377,16 @@ i.fa.fa-heart.fa-3x.cyan-text:hover{
   left: 4%;
   border: 4px solid white;
   border-radius: 50%;
+}
+
+.card-cascade.card span{
+  position: absolute;
+  top: 25%;
+  left: 23%;
+  color: white;
+  font-weight: bold;
+}
+
+.btn-title .mr-4, .btn-default.btn.Ripple-parent.btn-action.ml-auto.mr-4.lighten-3.mdb-coalor {
+   margin-right: 0; 
 }
