--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,187 +1,182 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 .btnnn {
-    padding: 4px 6px;
-    height: 28px;
-    border-radius: 0;
-    text-align: center;
-    line-height: 17px;
-    width: 100%;
-  }
- .footer{
-    //  margin-top: 8%;
-     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 25% 25% 25% 25%;
-    color: #fff;
-        background-color: #080808cf;
-    
-    // padding: 2%;
+  padding: 4px 6px;
+  height: 28px;
+  border-radius: 0;
+  text-align: center;
+  line-height: 17px;
+  width: 100%;
+}
+.footer {
+  //  margin-top: 8%;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 25% 25% 25% 25%;
+  color: #fff;
+  background-color: #080808cf;
+
+  // padding: 2%;
 }
 // .newsletter {
 //     margin: 2% 10%;
 // }
 
- .newsletterh6{
-    grid-column-start: 1 ;
-    grid-column-end: 2 ;
-    grid-row-start: 1 ;
-    grid-row-end: 2 ;
-    text-align: center;
+.newsletterh6 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  text-align: center;
 }
-.linksh6{
-    grid-column-start:2 ;
-    grid-column-end: 3;
-    grid-row-start: 1 ;
-    grid-row-end: 2 ;
+.linksh6 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
-.connecth6{
-    grid-column-start:3 ;
-    grid-column-end: 4;
-    grid-row-start: 1 ;
-    grid-row-end: 2 ;
-    text-align: center;
+.connecth6 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  text-align: center;
 }
-.social-iconsh6{
-    grid-column-start:4 ;
-    grid-column-end: 5 ;
-    grid-row-start: 1 ;
-    grid-row-end: 2 ;
-    text-align: center;
+.social-iconsh6 {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  text-align: center;
 }
 
-
-.form-group:first-child{
-    grid-column-start:1 ;
-    grid-column-end: 2;
-    grid-row-start: 2 ;
-    grid-row-end: 3 ;
+.form-group:first-child {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
-.form-group:nth-child(2){
-    grid-column-start:1 ;
-    grid-column-end: 2;
-    grid-row-start: 3 ;
-    grid-row-end: 4 ;
+.form-group:nth-child(2) {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 4;
 }
-.buttonnn{
-    grid-column-start:1 ;
-    grid-column-end: 2;
-    grid-row-start: 4 ;
-    grid-row-end: 5 ;
+.buttonnn {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 4;
+  grid-row-end: 5;
 }
 .form-group {
-    width: 60%;
-    text-align: start;
-    margin: 5% auto;
+  width: 60%;
+  text-align: start;
+  margin: 5% auto;
 }
-.form-control{
-    height: calc(1em + .75rem + 2px);
+.form-control {
+  height: calc(1em + 0.75rem + 2px);
 }
 h6.linksh6 {
-    text-align: center;
+  text-align: center;
 }
-.foteerAtag{
-    grid-column-start:2 ;
-    grid-column-end: 3;
-    grid-row-start: 2 ;
-    grid-row-end: 3 ;
-    text-align: center;
-    color: white;
+.foteerAtag {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  text-align: center;
+  color: white;
 }
-.foteerAtag2{
-    grid-column-start:2 ;
-    grid-column-end: 3;
-    grid-row-start: 3 ;
-    grid-row-end: 4 ;
-    text-align: center;
-    color: white;
+.foteerAtag2 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  text-align: center;
+  color: white;
 }
-.foteerAtag3{
-    grid-column-start:2 ;
-    grid-column-end: 3;
-    grid-row-start: 4 ;
-    grid-row-end: 5 ;
-    text-align: center;
-    color: white;
-}
-
-
-
-.foteerCon{
-    grid-column-start:3 ;
-    grid-column-end: 4;
-    grid-row-start: 2 ;
-    grid-row-end: 3 ;
-    text-align: center;
-}
-.foteerCon2{
-    grid-column-start:3 ;
-    grid-column-end: 4;
-    grid-row-start: 3 ;
-    grid-row-end: 4 ;
-    text-align: center;
-}
-.foteerCon3{
-    grid-column-start:3 ;
-    grid-column-end: 4;
-    grid-row-start: 4 ;
-    grid-row-end: 5 ;
-    text-align: center;
+.foteerAtag3 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 5;
+  text-align: center;
+  color: white;
 }
 
-
-.social-list{
-    grid-column-start:4 ;
-    grid-column-end: 5;
-    grid-row-start: 2 ;
-    grid-row-end: 3 ;  
-    text-align: center;
+.foteerCon {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  text-align: center;
+}
+.foteerCon2 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  text-align: center;
+}
+.foteerCon3 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 4;
+  grid-row-end: 5;
+  text-align: center;
 }
 
- .newsletterh6::before {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 3px;
-    width: 40px;
-    background: #417bff;
-    content: '';
- }
- .links{
+.social-list {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  text-align: center;
+}
+
+.newsletterh6::before {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 3px;
+  width: 40px;
+  background: #417bff;
+  content: "";
+}
+.links {
   text-align: center;
   margin: 0% 15% 3.2%;
 }
-.connect{
+.connect {
   text-align: center;
   margin: 2% 15% 27.2%;
   display: grid;
 }
-.connect span{
+.connect span {
   margin: 4px;
 }
-.mr-auto{
+.mr-auto {
   display: block;
 }
 
 button.buttonnn.btn.btn-light {
-    width: 20%;
-    margin: auto;
-    height: 35%;
-    line-height: 0;
-    padding: 1px;
+  width: 20%;
+  margin: auto;
+  height: 35%;
+  line-height: 0;
+  padding: 1px;
 }
 
 button.buttonnn.btn.btn-light {
-    width: 20%;
+  width: 20%;
 }
 .social-icon {
-    text-decoration: none;
-    color: #fff;
-
+  text-decoration: none;
+  color: #fff;
 }
-p > a:hover{
-    color: #d9d9d9;
-    text-decoration:  underline;
+p > a:hover {
+  color: #d9d9d9;
+  text-decoration: underline;
 }
 h1,
 h2,
@@ -189,130 +184,129 @@ h3,
 h4,
 h5,
 h6 {
-    margin:  1% 0 1% 0;
+  margin: 1% 0 1% 0;
 }
 ._12 {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
 ._14 {
-    font-size: 1.4em;
+  font-size: 1.4em;
 }
 ul {
-    padding:0;
-    list-style: none;
+  padding: 0;
+  list-style: none;
 }
 .footer-social-icons {
-    display:block;
-    margin: 2% 4% 40.2%;
-
+  display: block;
+  margin: 2% 4% 40.2%;
 }
 .social-icon {
-    color: #fff;
+  color: #fff;
 }
 ul.social-icons {
-    margin-top: 35px;
+  margin-top: 35px;
 }
 .social-icons li {
-    vertical-align: top;
-    display: inline;
-    // height: 100px;
+  vertical-align: top;
+  display: inline;
+  // height: 100px;
 }
 .social-icons a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 .fa-facebook {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #776d70;
+  padding: 10px 14px;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #776d70;
 }
 .fa-facebook:hover {
-    background-color: #3d5b99;
+  background-color: #3d5b99;
 }
 .fa-twitter {
-    padding:10px 12px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #776d70;
+  padding: 10px 12px;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #776d70;
 }
 .fa-twitter:hover {
-    background-color: #00aced;
+  background-color: #00aced;
 }
 .fa-rss {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #776d70;
+  padding: 10px 14px;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #776d70;
 }
 .fa-rss:hover {
-    background-color: #eb8231;
+  background-color: #eb8231;
 }
 .fa-youtube {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #776d70;
+  padding: 10px 14px;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #776d70;
 }
 .fa-youtube:hover {
-    background-color: #e64a41;
+  background-color: #e64a41;
 }
 .fa-linkedin {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #776d70;
+  padding: 10px 14px;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #776d70;
 }
 .fa-linkedin:hover {
-    background-color: #0073a4;
+  background-color: #0073a4;
 }
 .fa-github {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #776d70;
+  padding: 10px 14px;
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #776d70;
 }
 .fa-github:hover {
-    background-color: #5a32a3;
+  background-color: #5a32a3;
 }
 
-.fa{
-    border-radius: 10rem;
+.fa {
+  border-radius: 10rem;
 }
 form {
-    width: 75%;
-    display: grid;
+  width: 75%;
+  display: grid;
 }
 button.buttonnn.btn.btn-light {
-    width: 45%;
-    /* align-items: center; */
-    margin: auto;
+  width: 45%;
+  /* align-items: center; */
+  margin: auto;
 }
-.mr-auto.navbar-nav a.foteerAtag.nav-link{
-    color: #fff;
-    padding: 10% 0;
-}
-nav.footer.navbar.navbar-expand.navbar-light.bg-light {
-    background-color: #080808cf;
+.mr-auto.navbar-nav a.foteerAtag.nav-link {
+  color: #fff;
+  padding: 10% 0;
 }
 nav.footer.navbar.navbar-expand.navbar-light.bg-light {
-    background-color: #080808cf;
+  background-color: #080808cf;
+}
+nav.footer.navbar.navbar-expand.navbar-light.bg-light {
+  background-color: #080808cf;
 }
