--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -113,3 +113,44 @@ h1 span {
     border-color: black;
   }
 }
+a#goBack {
+  margin-left: 21vw;
+}
+span#goBack {
+  font-size: 1.5vw;
+  margin-top: 4%;
+  margin-left: 19vw;
+
+  color: #d9d9d9;
+}
+#goBackBtn {
+  color: #d9d9d9;
+  text-decoration: none;
+  font-size: 20px;
+}
+.btn {
+  color: #d9d9d9;
+}
+.btn:hover {
+  color: #d9d9d9;
+  text-decoration: none;
+}
+.newUser a {
+  color: #d9d9d9;
+  text-decoration: none;
+}
+.borderBu {
+  background-color: transparent;
+  border-color: none;
+  /* border: none; */
+  border: none;
+  border-bottom: 1px white solid;
+}
+.form-control:focus {
+  color: #495057;
+  background-color: transparent;
+  border-color: #ffffff;
+}
+.backsize {
+  font-size: 20px;
+}
