--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -390,3 +390,6 @@ i.fa.fa-heart.fa-3x.cyan-text:hover{
 .mr-4, .mx-4 {
   margin-right: 0rem!important;
 }
+.card-body{
+  background-color: white;
+}
