--- a/src/components/chat/chattest.scss
+++ b/src/components/chat/chattest.scss
@@ -363,3 +363,28 @@ ul {
     margin-right: 0; 
   margin-left: 0;
 }                                   
+.col-xl-4.col-lg-4.col-md-4.col-sm-3.col-3 {
+    margin: 0;
+}
+
+.form-group.mt-3.mb-0 {
+    width: auto;
+    flex-direction: column;
+    text-align: -webkit-right;
+}
+
+.form-group.mt-3.mb-0 textarea.form-control {
+    height: auto;
+    width: 60%;
+    margin-right: 8%;
+}
+
+.card.m-0{
+height: auto;
+}
+
+.form-group button.btn-default.btn.Ripple-parent.fancy-button{
+    margin-right: 8%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
